# og_ex

./: .gitignore  LICENSE  README.md  checksum-Elixir.OgEx.Native.exs  mix.exs  todo.md
.github/: release.yml
.github/workflows/: release.yml
config/: config.exs
docs/: 01-inline-controller.md  02-reusable-component.md  03-sibling-template.md  04-liveview.md  05-implementation.md  06-distribution.md  README.md  function-reference.md
examples/: og_ex_internals_example.ex  recommended_controller_example.ex
lib/: og_ex.ex
lib/og_ex/: application.ex  cache.ex  card.ex  config.ex  config_builder.ex  controller.ex  fonts.ex  head.ex  html.ex  image_response.ex  meta.ex  native.ex  renderer.ex  request.ex
lib/og_ex/cache/: ets.ex
lib/og_ex/renderer/: takumi.ex
native/og_ex_native/: Cargo.toml
native/og_ex_native/.cargo/: config.toml
native/og_ex_native/src/: lib.rs
test/: test_helper.exs
test/og_ex/: request_lifecycle_test.exs
test/og_ex/renderer/: takumi_test.exs
test/support/: test_card.ex  test_endpoint.ex  test_svg_card.ex
